--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-
+  <!--Author    : Wafa Rifki Anafin-->
+  <!--Facebook  : https://facebook.com/wafarifkianafin-->
+  <!--Instagram : https://instagram.com/wafarifki_-->
+  <!--Website   : https://wafarifki.tk-->
   <div class="kontener2" id="kontener2">
     <h1>Hai Sayang</h1>
     <button class="tombol" id="tombol">Mulai Sekarang</button>
