--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Love You</title>
   <meta name="description" content="Semangat beraktifitas ya sayang">
-  <meta name="author" content="Wafa Rifqi Anafin">
+  <meta name="author" content="Rizzu">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/efekteks.css">
   <link rel="stylesheet" href="css/responsif.css">
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-  <!--Author    : Wafa Rifki Anafin-->
-  <!--Facebook  : https://facebook.com/wafarifkianafin-->
-  <!--Instagram : https://instagram.com/wafarifki_-->
-  <!--Website   : https://wafarifki.tk-->
+  <!-- Author    : Rizzu -->
+  <!--Facebook  : -->
+  <!--Instagram : -->
+  <!--Website   : -->
   <div class="kontener2" id="kontener2">
-    <h1>Hai Sayang</h1>
+    <h1>Hai Putri Nurfarhanie</h1>
     <button class="tombol" id="tombol">Mulai Sekarang</button>
   </div>
 
@@ -36,17 +36,17 @@
         <img src="gambar/gambar1.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
         <div class="ucapan1">
-          <p class="isiucapan1">Aku butuh kamu seperti jantung membutuhkan detik. Aku menginginkanmu seperti gurun pasir
+          <p class="isiucapan1">Aku butuh kamu seperti pelangi membutuhkan air. Aku menginginkanmu seperti gurun pasir
             yang mengharapkan hujan.</p>
         </div>
       </section>
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
         <h1 class="judul_halaman">Sayang</h1>
         <br>
-        <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
+        <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar2">
         <br>
         <div class="ucapan2">
-          <p class="isiucapan2">Aku Menyayangimu bukan karena siapa dirimu melainkan apa yang terjadi saat aku
+          <p class="isiucapan2">Aku Menyayangimu bukan karena siapa dirimu atau betapa cantiknya dirimu, melainkan apa yang terjadi saat aku
             bersamamu.
           </p>
         </div>
@@ -54,15 +54,15 @@
       <section class="halaman3 dalemnya_halaman" onclick="PindahKeHalaman(2)">
         <h1 class="judul_halaman">Kamu</h1>
         <br>
-        <img src="gambar/gambar3.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
+        <img src="gambar/gambar3.jpg" alt="Web Bucin Html, Css, Js" class="gambar3">
         <br>
         <div class="ucapan3">
           <p class="isiucapan3">Aku selalu berharap untuk dapat hadir di setiap mimpi indahmu. Kemudian, aku akan
-            mengatakan bahwa aku akan selalu merindukanmu.</p>
+            mengatakan bahwa aku akan selalu Menyayangimu.</p>
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">Anisa Aulia</h1>
+        <h1 class="judul_halaman">Putri Nurfarhanie</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
@@ -71,19 +71,21 @@
           var jam = hari.getHours();
           if (jam >= 0 && jam < 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Pagi Sayang!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya kamu. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Pagi Sayang!</h1>" +
+              "<p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya foto indah kamu. Jangan lupa makan ya, dont eat cake too much okey ;-;<p>" +
+              "<p class='isiucapan'> i love you Bby <3<p>"
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Sayang. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan dan Istirahat Yaa Bby. i love you Bby <3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya sayang. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Bby. i love you bby <3<p>"
             );
           } else {
             document.write(
-              "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you bby <3<p>"
             );
           }
           document.write("</center>");
