--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan dan Istirahat Yaa Bby. i love you Bby <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan dan Istirahat Yaa Bby. Dont always play Yeetalk ;-;<p>" +
+              "<p class='isiucapan'> i love you Bby <3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
