--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--Instagram : -->
   <!--Website   : -->
   <div class="kontener2" id="kontener2">
-    <h1>Hai Putri Nurfarhanie</h1>
+    <h1>Hi</h1>
     <button class="tombol" id="tombol">Mulai Sekarang</button>
   </div>
 
@@ -33,7 +33,7 @@
       <section class="halaman1 dalemnya_halaman" onclick="PindahKeHalaman(0)">
         <h1 class="judul_halaman">Aku</h1>
         <br>
-        <img src="gambar/gambar1.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
+        <img src="gambar/gambar.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
         <div class="ucapan1">
           <p class="isiucapan1">Aku butuh kamu seperti pelangi membutuhkan air. Aku menginginkanmu seperti gurun pasir
@@ -43,7 +43,7 @@
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
         <h1 class="judul_halaman">Sayang</h1>
         <br>
-        <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar2">
+        <img src="gambar/gambar.jpg" alt="Web Bucin Html, Css, Js" class="gambar2">
         <br>
         <div class="ucapan2">
           <p class="isiucapan2">Aku Menyayangimu bukan karena siapa dirimu atau betapa cantiknya dirimu, melainkan apa yang terjadi saat aku
@@ -54,7 +54,7 @@
       <section class="halaman3 dalemnya_halaman" onclick="PindahKeHalaman(2)">
         <h1 class="judul_halaman">Kamu</h1>
         <br>
-        <img src="gambar/gambar3.jpg" alt="Web Bucin Html, Css, Js" class="gambar3">
+        <img src="gambar/gambar.jpg" alt="Web Bucin Html, Css, Js" class="gambar3">
         <br>
         <div class="ucapan3">
           <p class="isiucapan3">Aku selalu berharap untuk dapat hadir di setiap mimpi indahmu. Kemudian, aku akan
@@ -62,7 +62,7 @@
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">Putri Nurfarhanie</h1>
+        <h1 class="judul_halaman">Buat siapa?</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
@@ -72,21 +72,21 @@
           if (jam >= 0 && jam < 12) {
             document.write(
               "<h1 class='ucapan'>Selamat Pagi Sayang!</h1>" +
-              "<p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya foto indah kamu. Jangan lupa makan ya, dont eat cake too much okey ;-;<p>" +
-              "<p class='isiucapan'> i love you Bby <3<p>"
+              "<p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya foto indah kamu. Jangan lupa makan ya ;-;<p>" +
+              "<p class='isiucapan'> i love you<3<p>"
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan dan Istirahat Yaa Bby. Dont always play Yeetalk ;-;<p>" +
-              "<p class='isiucapan'> i love you Bby <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan dan Istirahat Yaa Sayang. ;-;<p>" +
+              "<p class='isiucapan'> i love you<3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Bby. i love you bby <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang yaa. i love you<3<p>"
             );
           } else {
             document.write(
-              "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you bby <3<p>"
+              "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you<3<p>"
             );
           }
           document.write("</center>");
